whoami/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
    - name: whoami
      port: 80
  selector:
    app: whoami
